--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero">
           <div class="container">
             <div class="hero__body">
-              <div class="hero__title">
+              <div class="hero__title _anim-items">
                 <h1>Elegant Interior Design for your home & office</h1>
               </div>
               <div class="hero_subtitle">
@@ -162,13 +162,7 @@
                 <img src="./img/projects/2.png" alt="project2" />
               </div>
               <div class="slider__item">
-                <img src="./img/projects/3.png" alt="project3" />
-              </div>
-              <div class="slider__item">
                 <img src="./img/projects/1.png" alt="project1" />
-              </div>
-              <div class="slider__item">
-                <img src="./img/projects/2.png" alt="project2" />
               </div>
               <div class="slider__item">
                 <img src="./img/projects/3.png" alt="project3" />
@@ -284,10 +278,21 @@
                     </div>
                     <div class="testimonial__slide">
                       <p class="testimonial__text">
-                        I am ipsum dolor sit amet, consectetur adipiscing elit.
-                        Ornare sit convallis risus sit elit. Rutrum arcu cursus
-                        aenean ut.Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit. Ornare sit convallis
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Accusamus ut maxime laboriosam, vero repudiandae
+                        corporis dicta ratione veritatis voluptate nostrum
+                        officia excepturi inventore? Iusto eos asperiores
+                        dolorum quis consequuntur quaerat sed repudiandae error
+                        animi non nobis, earum eligendi, deleniti aliquid ex
+                        doloribus totam explicabo quasi. Suscipit, facilis
+                        necessitatibus. Mollitia ab quasi enim autem qui
+                        perferendis et expedita iusto consequatur labore? Nihil
+                        mollitia beatae accusamus, asperiores quia consequatur
+                        deleniti iste laborum saepe, doloribus ipsum soluta
+                        adipisci inventore eius minus ducimus ut sunt. Molestiae
+                        ratione praesentium minus corporis cumque nesciunt,
+                        voluptate, impedit dolores laboriosam assumenda itaque
+                        in excepturi quam alias esse voluptates!
                       </p>
                       <div class="testimonial__info">
                         <div class="testimonial__appraisal-name">
@@ -301,6 +306,71 @@
                         <p class="testimonial__position">prosto krasavchik</p>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="faq">
+          <div class="container">
+            <div class="faq__row">
+              <div class="faq__column">
+                <div class="faq__item">
+                  <div class="faq__question">
+                    <p>When i need to contact with you?.</p>
+                  </div>
+                  <div class="faq__answer">
+                    <p>
+                      If you are ipsum dolor sit amet, consectetur adipiscing
+                      elit. Enim, nisi eget egestas proin. Diam bibendum
+                      facilisi risus scelerisque tellus bibendum tristique. Sit
+                      augue id nibh feugiat dui. Ipsum tortor integer
+                      suspendisse arcu, maecenas lacus. Rhoncus ac.
+                    </p>
+                  </div>
+                </div>
+                <div class="faq__item">
+                  <div class="faq__question">
+                    <p>When i need to contact with you?.</p>
+                  </div>
+                  <div class="faq__answer">
+                    <p>
+                      If you are ipsum dolor sit amet, consectetur adipiscing
+                      elit. Enim, nisi eget egestas proin. Diam bibendum
+                      facilisi risus scelerisque tellus bibendum tristique. Sit
+                      augue id nibh feugiat dui. Ipsum tortor integer
+                      suspendisse arcu, maecenas lacus. Rhoncus ac.
+                    </p>
+                  </div>
+                </div>
+                <div class="faq__item">
+                  <div class="faq__question">
+                    <p>When i need to contact with you?.</p>
+                  </div>
+                  <div class="faq__answer">
+                    <p>
+                      If you are ipsum dolor sit amet, consectetur adipiscing
+                      elit. Enim, nisi eget egestas proin. Diam bibendum
+                      facilisi risus scelerisque tellus bibendum tristique. Sit
+                      augue id nibh feugiat dui. Ipsum tortor integer
+                      suspendisse arcu, maecenas lacus. Rhoncus ac.
+                    </p>
+                  </div>
+                </div>
+                <div class="faq__item">
+                  <div class="faq__question">
+                    <p>When i need to contact with you?.</p>
+                  </div>
+                  <div class="faq__answer">
+                    <p>
+                      If you are ipsum dolor sit amet, consectetur adipiscing
+                      elit. Enim, nisi eget egestas proin. Diam bibendum
+                      facilisi risus scelerisque tellus bibendum tristique. Sit
+                      augue id nibh feugiat dui. Ipsum tortor integer
+                      suspendisse arcu, maecenas lacus. Rhoncus ac.
+                    </p>
                   </div>
                 </div>
               </div>
